# rbartpackages

./: .gitignore  .gitlint  .pre-commit-config.yaml  DESCRIPTION  LICENSE  Makefile  README.md  asv.conf.json  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: release.yml  tests.yml
_site/: index.html
benchmarks/: __init__.py  benchmarks.py
config/: asv-install.sh  asv_machine.py  check_path_headers.py  check_workarounds.py  refs_for_asv.py  update_oldest_deps.py  update_python_version.py  util.py
config/ipython/: .gitignore
config/ipython/profile_default/: ipython_config.py
config/ipython/profile_default/startup/: startup.ipy
docs/: .gitignore  Makefile  changelog.md  conf.py  development.rst  index.rst  pkglist.md  readme.md
docs/_static/: custom.css
docs/_templates/autosummary/: class.rst  module.rst
docs/examples/: basic.ipynb  index.rst
docs/guide/: custom-wrapper.rst  index.rst  installation.rst  quickstart.rst
docs/reference/: index.rst
src/rbartpackages/: BART.py  BART3.py  __init__.py  _base.py  bartMachine.py  base.py  dbarts.py  missBART.py
src/rbartpackages/_src/: BART.py  BART3.py  __init__.py  bartMachine.py  bartcommon.py  base.py  dbarts.py  missBART.py
tests/: __init__.py  conftest.py  test_BART.py  test_BART3.py  test_BART_BART3.py  test_bartMachine.py  test_base.py  test_dbarts.py  test_missBART.py  test_version.py  util.py
